--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,114 @@
-.App {
-  text-align: center;
+*{
+  margin:0;
+  padding:0;
+  text-decoration: none;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container{
+  display:flex;
+  background-color: #0f9e9e;
+  
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+main{
+  width: 100%;
+  padding: 50px;
+ 
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.sidebar{
+  background: #6c6b6a;
+  color: #fff;
+  height: 100vh;
+  width: 380px;
+  transition: all 0.5s;
+}
+.top_section{
   display: flex;
-  flex-direction: column;
+  align-items:center;
+  padding:20px 10px;
+}
+.logo{
+  font-size: 25px;
+  color:#f78b07 ;
+}
+.bars{
+  display: flex;
+  font-size: 25px;
+  margin-left: 50px;
+}
+.link{
+  display: flex;
+  color: #fff;
+  padding: 10px 15px;
+  gap: 15px;
+  transition: all 0.5s;
+}
+.link:hover{
+ /*background:#f78b07;*/
+  color: #f7ef07;
+  transition: all 0.5s;
+}
+.active{
+  background: #f78b07;
+  color: #000;
+}
+.icon, .link_text{
+  font-size: 20px;
+}
+/*........dashboardd.......*/
+
+.dashboard {
+  padding: 50px 0;
+  position:absolute;
+  
+}
+.dashboard .items {
+  background-color: #bbbac2;
+  padding: 30px;
+  text-align: center;
+  width: fit-content;
+  height: 500px;
+  gap: 20px;
+}
+.dashboard .img {
+  width: 100px;
+  height: 100px;
+  border-radius:0%;
+  background-color: #fff;
+  padding: 15px;
+}
+.dashboard img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.dashboard .text {
+  margin-left: 15px;
+  text-align: left;
+}
+.dashboard .text h1 {
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 45px;
+}
+
+
+.dashboard .details .dimg img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 20px;
+}
+.dashboard .details .box {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: grey;
+}
+.dashboard .details span {
+  color: #000;
+  font-weight: 500;
+  font-size: 14px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dashboard h3 {
+  font-weight: 500;
+  color: #ff7300;
 }
