--- a/client/src/componets/topbar/topbar.css
+++ b/client/src/componets/topbar/topbar.css
@@ -1,13 +1,14 @@
 .topbarContainer {
-    height: 60px;
-    width: 100%;
-    background-color: #6c6b6a;
-    display: flex;
-    align-items:center;
-    position:sticky;
-    z-index: 999;
-    
-  }
+  height: 60px;
+  width: 100%;
+  background-color: #6c6b6a;
+  display: flex;
+  align-items:center;
+  position:sticky;
+  z-index: 999;
+  margin-top: -49px; /* Add this line to move the container up */
+}
+
   
   .topbarLeft {
     flex: 3;
