--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,15 +2,23 @@
   margin:0;
   padding:0;
   text-decoration: none;
+  
+
+  
 }
 .container{
   display:flex;
-  background-color: #0f9e9e;
+  position:sticky;
+  background-image: url(../public/images/blackboard.jpg);
+  
+  
+  
   
 }
 main{
   width: 100%;
   padding: 50px;
+  
  
 }
 .sidebar{
@@ -19,6 +27,11 @@ main{
   height: 100vh;
   width: 380px;
   transition: all 0.5s;
+  position: sticky;
+  top: 0px;
+  
+  
+ 
 }
 .top_section{
   display: flex;
@@ -57,16 +70,24 @@ main{
 
 .dashboard {
   padding: 50px 0;
-  position:absolute;
+  position:sticky;
+  
+  
+  
   
 }
+
+
+
 .dashboard .items {
-  background-color: #bbbac2;
+  background-color: #fff;
   padding: 30px;
   text-align: center;
-  width: fit-content;
-  height: 500px;
-  gap: 20px;
+  width: 200px;;
+  height: 250px;
+  gap: 30px;
+ 
+  
 }
 .dashboard .img {
   width: 100px;
@@ -101,6 +122,7 @@ main{
   display: flex;
   align-items: center;
   color: grey;
+  
 }
 .dashboard .details span {
   color: #000;
@@ -111,4 +133,56 @@ main{
 .dashboard h3 {
   font-weight: 500;
   color: #ff7300;
+}
+.grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 30px;
+  
+}
+
+.grid2 {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 30px;
+  
+}
+.outline-btn {
+  margin: 0;
+  box-shadow: none;
+  border: 2px solid #fff;
+  width: 100%;
+  transition: 0.5s;
+}
+.outline-btn:hover {
+  background-color: #ff7300;
+  color: #fff;
+}
+.grid3 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+}
+.padding {
+  padding: 80px 0;
+}
+.shadow {
+  box-shadow: 0 5px 25px -2px rgb(0 0 0 / 6%);
+  background-color: #fff;
+}
+@media screen and (max-width: 768px) {
+  .grid2,
+  .grid3,
+  .grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .back {
+    background-position: center;
+    padding-top: 50%;
+    height: 80vh;
+  }
+}
+
+.imageAdmin{
+  background-image: url(../public/images/user.jpg);
 }
