--- a/client/src/pages/hirulanding/components/home/hero/hero.css
+++ b/client/src/pages/hirulanding/components/home/hero/hero.css
@@ -1,5 +1,5 @@
 .hero{
-    background-image: url(../../../../public/images/flexible-study-02-1280x732-1.webp);
+    background-image: url(../../../../../../public/images/flexible-study-02-1280x732-1.webp);
     background-size: cover;
     background-attachment: fixed;
     position: absolute;
