--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,114 +1,42 @@
-*{
-  margin:0;
-  padding:0;
-  text-decoration: none;
-}
-.container{
-  display:flex;
-  background-color: #0f9e9e;
-  
-}
-main{
-  width: 100%;
-  padding: 50px;
- 
-}
-.sidebar{
-  background: #6c6b6a;
-  color: #fff;
-  height: 100vh;
-  width: 380px;
-  transition: all 0.5s;
-}
-.top_section{
-  display: flex;
-  align-items:center;
-  padding:20px 10px;
-}
-.logo{
-  font-size: 25px;
-  color:#f78b07 ;
-}
-.bars{
-  display: flex;
-  font-size: 25px;
-  margin-left: 50px;
-}
-.link{
-  display: flex;
-  color: #fff;
-  padding: 10px 15px;
-  gap: 15px;
-  transition: all 0.5s;
-}
-.link:hover{
- /*background:#f78b07;*/
-  color: #f7ef07;
-  transition: all 0.5s;
-}
-.active{
-  background: #f78b07;
-  color: #000;
-}
-.icon, .link_text{
-  font-size: 20px;
-}
-/*........dashboardd.......*/
-
-.dashboard {
-  padding: 50px 0;
-  position:absolute;
-  
-}
-.dashboard .items {
-  background-color: #bbbac2;
-  padding: 30px;
+.App {
   text-align: center;
-  width: fit-content;
-  height: 500px;
-  gap: 20px;
-}
-.dashboard .img {
-  width: 100px;
-  height: 100px;
-  border-radius:0%;
-  background-color: #fff;
-  padding: 15px;
-}
-.dashboard img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.dashboard .text {
-  margin-left: 15px;
-  text-align: left;
-}
-.dashboard .text h1 {
-  font-size: 30px;
-  font-weight: 500;
-  line-height: 45px;
 }
 
 
-.dashboard .details .dimg img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin-right: 20px;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
-.dashboard .details .box {
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  min-height: 100vh;
   display: flex;
+  width: 100%;
+  flex-direction: column;
   align-items: center;
-  color: grey;
-}
-.dashboard .details span {
-  color: #000;
-  font-weight: 500;
-  font-size: 14px;
+  justify-content: center;
+  color: white;
 }
 
-.dashboard h3 {
-  font-weight: 500;
-  color: #ff7300;
+.formCenter {
+
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
